package dev.carlesav.dnivalidator.core

object TestTags {
    const val TEXT_INPUT_VALIDATE = "TEXT_INPUT_VALIDATE"
    const val BTN_VALIDATE = "BTN_VALIDATE"
    const val VALIDATION_RESULT = "VALIDATION_RESULT"
    const val TEXT_INPUT_GENERATE = "TEXT_INPUT_GENERATE"
    const val BTN_GENERATE = "BTN_GENERATE"
    const val GENERATION_RESULT = "GENERATION_RESULT"
}